Add 2 empty projects : VanLife & Card3D Effect

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,6 @@
   <h3>Portfolio</h3>
 </div>
 
-
 <div class="project-container">
 
   <a class="project" routerLink="/instarand">
@@ -48,12 +47,36 @@
 
   <a class="project" routerLink="/treejs">
     <h2 class="project-title">TreeJS</h2>
-    <img alt="InstaRand" class="project-image" height="887" ngSrc="../assets/resume-instarand.jpg" width="1895">
+    <img alt="TreeJS" class="project-image" height="724" ngSrc="../assets/treejs.png" width="366">
     <p class="project-description">
-      TreeJS is a library that allows you to create 3D scene
+      Just a TreeJS sandbox to test some features of the library.
+      The library allows you to create 3D scene with a lot of features.
     </p>
     <div class="project-tags">
       <span class="tag">TreeJS</span>
+    </div>
+  </a>
+
+  <a class="project" routerLink="/vanlife">
+    <h2 class="project-title">VanLife</h2>
+    <img alt="VanLife" class="project-image" height="924" ngSrc="../assets/vanlife.png" width="1640">
+    <p class="project-description">
+      VanLife is a website that allows you to discover the world of vanlife.
+      You can rent a van, buy a van, for your next trip.
+    </p>
+    <div class="project-tags">
+      <span class="tag">Angular</span>
+    </div>
+  </a>
+
+  <a class="project" routerLink="/card-effect">
+    <h2 class="project-title">Shoes 3D effect</h2>
+    <img alt="Shoes effecet" class="project-image" height="924" ngSrc="../assets/shoes-effect.png" width="1640">
+    <p class="project-description">
+      A simple 3D card effect with CSS.
+    </p>
+    <div class="project-tags">
+      <span class="tag">Angular</span>
     </div>
   </a>
 
