--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -40,8 +40,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin: 0 0 2rem 0;
+  margin: 1rem 7rem 2rem 7rem;
   color: $text-color-light;
+
 
   .project {
     width: 300px;
