--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,11 +1,15 @@
 @import "_utils";
 @import "_variables";
 
+html, body {
+  margin: 0;
+  height: 100%;
+  padding: 0;
+}
+
 body {
   font-family: "Roboto", serif;
   font-size: $font-size;
-  margin: 0;
-  padding: 0;
   color: $text-color-dark;
   background-color: $background-color;
 }
