--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,4 +80,15 @@
     </div>
   </a>
 
+  <a class="project" href="assets/chocolate-bar/browser/index.html">
+    <h2 class="project-title">Jeux de la tablette</h2>
+    <img alt="Chocolate bar game" class="project-image" height="924" ngSrc="../assets/tablette.png" width="1640">
+    <p class="project-description">
+      You can play with a chocolat bar and win !
+    </p>
+    <div class="project-tags">
+      <span class="tag">Angular</span>
+    </div>
+  </a>
+
 </div>
