--- a/src/app/projet/card-effect/card-effect.component.scss
+++ b/src/app/projet/card-effect/card-effect.component.scss
@@ -77,6 +77,7 @@ main {
         display: flex;
         flex-wrap: wrap;
         margin: 0 0 0.5rem 0;
+        transition: all 0.75s ease-out;
 
         .tag {
           margin: 0 0.5rem 0.5rem 0;
