--- a/src/app/projet/snchess/snchess.component.html
+++ b/src/app/projet/snchess/snchess.component.html
@@ -1,1 +1,5 @@
-<h3>In progress...</h3>
+<app-snchess-header></app-snchess-header>
+<main>
+  <router-outlet></router-outlet>
+</main>
+<app-snchess-footer></app-snchess-footer>
