--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,7 +80,7 @@
     </div>
   </a>
 
-  <a class="project" href="assets/chocolate-bar/browser/index.html">
+  <a class="project" href="https://chocolate-bar.netlify.app/">
     <h2 class="project-title">Jeux de la tablette</h2>
     <img alt="Chocolate bar game" class="project-image" height="924" ngSrc="../assets/tablette.png" width="1640">
     <p class="project-description">
