--- a/src/app/projet/insta-rand/header/insta-rand-header.component.html
+++ b/src/app/projet/insta-rand/header/insta-rand-header.component.html
@@ -1,6 +1,7 @@
 <nav>
   <a class="logo-container" href="/">
-    <img alt="InstaRand Logo" class="logo" height="183" ngSrc="../../../../../assets/InstaRand/logoInstaRand.png" width="722"/>
+    <img alt="InstaRand Logo" class="logo" height="183" ngSrc="../../../../../assets/InstaRand/logoInstaRand.png"
+         width="722"/>
   </a>
   <div class="nav-container">
     <div class="nav-link actual">
