--- a/src/app/projet/insta-rand/loading/insta-rand-loading.component.html
+++ b/src/app/projet/insta-rand/loading/insta-rand-loading.component.html
@@ -1,3 +1,4 @@
 <div class="loading">
-  <img alt="InstaRand Logo" class="loadingLogo" height="183" ngSrc="../../../../../assets/InstaRand/logoInstaRand.png" width="722"/>
+  <img alt="InstaRand Logo" class="loadingLogo" height="183" ngSrc="../../../../../assets/InstaRand/logoInstaRand.png"
+       width="722"/>
 </div>
