--- a/src/app/projet/insta-rand/stories/insta-rand-stories.component.html
+++ b/src/app/projet/insta-rand/stories/insta-rand-stories.component.html
@@ -3,9 +3,10 @@
     <div *ngFor="let story of allStories; let index = index" [style.animation-delay]="(index * 0.25) + 0.5 + 's'"
          class="story">
       <div class="story-picture-border"></div>
-      <img alt="Story of {{story}}" class="story-picture" height="70" ngSrc="https://picsum.photos/70/70?random={{index}}"
+      <img alt="Story of {{story}}" class="story-picture" height="70"
+           ngSrc="https://picsum.photos/70/70?random={{index}}"
            width="70">
-      <p class="story-name">{{story}}</p>
+      <p class="story-name">{{ story }}</p>
     </div>
   </div>
 </div>
