Modify link of ChocolateBarGame and add dates for projects

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,12 +10,15 @@
     <h2 class="project-title">InstaRand</h2>
     <img alt="InstaRand" class="project-image" height="887" ngSrc="../assets/resume-instarand.jpg" width="1895">
     <p class="project-description">
-      InstaRand is a social network that allows you to discover the beauty in the randomness.
+      InstaRand 📸 is a social network that allows you to discover the beauty in the randomness.
     </p>
     <div class="project-tags">
-      <span class="tag">Angular</span>
-      <span class="tag">SCSS</span>
-      <span class="tag">TypeScript</span>
+      <div>
+        <span class="tag">Angular</span>
+        <span class="tag">SCSS</span>
+        <span class="tag">TypeScript</span>
+      </div>
+      <span class="project-date">Mar - 2023</span>
     </div>
   </a>
 
@@ -23,12 +26,15 @@
     <h2 class="project-title">Le Monde du VTT</h2>
     <img alt="Le Monde du VTT" class="project-image" height="883" ngSrc="../assets/resume-vtt.jpg" width="1896">
     <p class="project-description">
-      Le Monde du VTT is a website that allows you to discover the world of mountain biking.
+      Le Monde du VTT 🚴‍ is a website that allows you to discover the world of mountain biking.
     </p>
     <div class="project-tags">
-      <span class="tag">HTML</span>
-      <span class="tag">CSS</span>
-      <span class="tag">JS</span>
+      <div>
+        <span class="tag">HTML</span>
+        <span class="tag">CSS</span>
+        <span class="tag">JS</span>
+      </div>
+      <span class="project-date">Dec - 2020</span>
     </div>
   </a>
 
@@ -36,12 +42,15 @@
     <h2 class="project-title">SNCHESS</h2>
     <img alt="SNCHESS" class="project-image" height="887" ngSrc="../assets/resume-snchess.jpg" width="1892">
     <p class="project-description">
-      SNCHESS allows you to book train tickets, with the SNCF API. With Maps, you can also find the nearest station.
+      SNCHESS 🚃 allows you to book train tickets, with the SNCF API. With Maps, you can also find the nearest station.
     </p>
     <div class="project-tags">
-      <span class="tag">HTML</span>
-      <span class="tag">CSS</span>
-      <span class="tag">JS</span>
+      <div>
+        <span class="tag">HTML</span>
+        <span class="tag">CSS</span>
+        <span class="tag">JS</span>
+      </div>
+      <span class="project-date">May - 2021</span>
     </div>
   </a>
 
@@ -49,11 +58,14 @@
     <h2 class="project-title">TreeJS</h2>
     <img alt="TreeJS" class="project-image" height="724" ngSrc="../assets/treejs.png" width="366">
     <p class="project-description">
-      Just a TreeJS sandbox to test some features of the library.
+      Just a TreeJS 🖲️ sandbox to test some features of the library.
       The library allows you to create 3D scene with a lot of features.
     </p>
     <div class="project-tags">
-      <span class="tag">TreeJS</span>
+      <div>
+        <span class="tag">TreeJS</span>
+      </div>
+      <span class="project-date">May - 2023</span>
     </div>
   </a>
 
@@ -61,11 +73,11 @@
     <h2 class="project-title">VanLife</h2>
     <img alt="VanLife" class="project-image" height="924" ngSrc="../assets/vanlife.png" width="1640">
     <p class="project-description">
-      VanLife is a website that allows you to discover the world of vanlife.
+      VanLife 🚐 is a website that allows you to discover the world of vanlife.
       You can rent a van, buy a van, for your next trip.
     </p>
     <div class="project-tags">
-      <span class="tag">Angular</span>
+      <span class="tag">💨</span>
     </div>
   </a>
 
@@ -73,21 +85,30 @@
     <h2 class="project-title">Shoes 3D effect</h2>
     <img alt="Shoes effecet" class="project-image" height="924" ngSrc="../assets/shoes-effect.png" width="1640">
     <p class="project-description">
-      A simple 3D card effect with CSS.
+      A simple 3D card 🃏 effect with a shoe. You can rotate the shoe with your mouse.
+      Only with CSS and HTML !
     </p>
     <div class="project-tags">
-      <span class="tag">Angular</span>
+      <div>
+        <span class="tag">HTML</span>
+        <span class="tag">CSS</span>
+      </div>
+      <span class="project-date">May - 2023</span>
     </div>
   </a>
 
-  <a class="project" href="https://chocolate-bar.netlify.app/">
-    <h2 class="project-title">Jeux de la tablette</h2>
+  <a class="project" href="https://chocolate.karimagine.fr/">
+    <h2 class="project-title">Chocolate Game</h2>
     <img alt="Chocolate bar game" class="project-image" height="924" ngSrc="../assets/tablette.png" width="1640">
     <p class="project-description">
-      You can play with a chocolat bar and win !
+      Play 2 players with a virtual chocolate bar 🍫. Only one square is "poisoned" ☠️. Take turns breaking the bar and
+      if you eat the poisoned square, you lose 😢.
     </p>
     <div class="project-tags">
-      <span class="tag">Angular</span>
+      <div>
+        <span class="tag">Angular</span>
+      </div>
+      <span class="project-date">Avr - 2024</span>
     </div>
   </a>
 
