--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,7 @@ $loading-duration: 2s;
 // Colors variables
 $text-color-dark: #000000;
 $text-color-light: #4d3a1f;
+$text-color-light-2: #ad9d8d;
 $border-color: #ffdbb9;
 $background-color: #ffffff;
 
