--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -110,6 +110,7 @@
       display: flex;
       flex-wrap: wrap;
       margin: 0 0 0.5rem 0;
+      justify-content: space-between;
 
       .tag {
         margin: 0 0.5rem 0.5rem 0;
@@ -118,7 +119,15 @@
         border-radius: $border-radius;
         background-color: $background-color;
         font-size: 0.8rem;
+        justify-self: start;
       }
+    }
+
+    .project-date {
+      font-size: 0.8rem;
+      margin: 0 0.5rem 0.5rem 0;
+      padding: 0.2rem 0.5rem;
+      color: $text-color-light-2;
     }
 
     &:nth-child(3) {
